app/assets/stylesheets/app.css
/* ... */
.message-reply {
    width: 100%;
    max-width: 100%;
    height: auto;
    max-height: 150px;
    min-height: 50px;
    margin: 10px 0;
    padding: 15px;
    border: 1px solid #ddd;
    outline: none;
    /*overflow-y: scroll;
    overflow: -moz-scrollbars-none;
    -ms-overflow-style: none;*/
}
.message-reply:focus {
    border-color: #92d13d!important;
    /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.055) inset, 0 0 8px rgba(84, 139, 12, 0.5)!important;*/
}
.message-title {
    padding: 10px;
    border-radius: 3px;
    background-color: #f1f1f1;
    margin: 3px 0 15px 0;
    text-align: center;
}
.message-counter {
    font-size: 13px;
    font-weight: 400;
    vertical-align: 7%;
}
.tabs-separator {
    height: 20px;
    border: 1px solid #ddd;
    border-top: none;
    border-bottom: none;
    background-color: #ffffff;
}
.records-wrapper  {
    border: 1px solid #ddd;
    border-top: none;
    min-height: 668px;
    background-color: #ffffff;
}
.purchase-pills {
    padding: 0 15px;
}
/* Directly override bootstrap list-group-item */
.list-group-item > p {
    overflow: hidden;
    height: 17px;
}
.list-group-item .badge {
    background-color: #AAAAAA;
}
.list-group-item:first-child {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
.list-group-item:last-child {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}
.close {
    font-size: 18px;
}
/* Add custom convo-preview to list-group-item */
.convo-preview {
    position: relative;
    height: 62px;
}
.close-wrapper {
    position: absolute;
    top: 10px;
    right: 15px;
    z-index: 3;
}
.close-wrapper > .close {
    display: none;
}
.convo-preview.active > .close-wrapper > .close,
.convo-preview:hover > .close-wrapper > .close,
.convo-preview:focus > .close-wrapper > .close {
    display: inline;
}
.list-group > div {
    border-radius: 4px;
    /* box-shadow wouldn't show because the outer div needs overflow:hidden to hide the scrollbars */
    /* box-shadow: 0 0 5px #ccc; */
}
.list-group > div:first-child .list-group-item {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}
.list-group > div:last-child .list-group-item {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    margin-bottom: 0;
}
.convo-preview.active > .list-group-item,
.convo-preview.active:hover > .list-group-item,
.convo-preview.active:focus > .list-group-item {
    background-image: linear-gradient(to bottom, #89CB30 0%, #72BB10 100%);
    background-repeat: repeat-x;
    border-color: #72BB10;
    text-shadow:
    -1px -1px 0 #5ca402,
    1px -1px 0 #5ca402,
    -1px 1px 0 #5ca402,
    1px 1px 0 #5ca402;
    z-index: 0;
}
.convo-preview.active .list-group-item-text,
.convo-preview.active:hover .list-group-item-text,
.convo-preview.active:focus .list-group-item-text {
    text-shadow: none;
    color: #307100;
}
.convo-preview.active > a.list-group-item .list-group-item-heading,
.convo-preview.active:hover > a.list-group-item .list-group-item-heading,
.convo-preview.active:focus > a.list-group-item .list-group-item-heading {
    color: #ffffff;
}
.convo-preview.active .badge,
.convo-preview.active:hover .badge,
.convo-preview.active:focus .badge {
    text-shadow: none;
    background-color: #ffffff;
    color: rgb(66, 139, 202);
}
.close-wrapper:hover + .list-group-item > .list-group-item-text,
.close-wrapper:hover + .list-group-item > .list-group-item-heading,
.close-wrapper:hover + .list-group-item,
.close-wrapper:focus + .list-group-item {
    background: #EB4848 none!important;
    border-color: #EB4848!important;
    color: rgb(51, 51, 51)!important;
    text-shadow: none!important;
}
.outer-convo {
    overflow: hidden;
    max-height: 600px;
}
.scroll {
    margin-right: -18px !important;
    overflow-y: scroll;
    overflow-x: hidden;
    padding-right: 18px;
}

